# FaSt_Fig

./: .gitignore  CHANGELOG.md  README.md  example_preset.yaml  examples_fastfig.py  pyproject.toml
fast_fig/: class_ffig.py  presets.py
tests/: test_fast_fig.py  test_presets.py
