[project]
name = "fast_fig"
version = "0.6.1"
description = "FaSt_Fig is a wrapper for matplotlib with templates."
authors = [
    {name = "Fabian Stutzki", email = "fast@fast-apps.de"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["matplotlib", "figure"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.0",
    "matplotlib>=3.6.0",
    "pandas>=2.1.0",
    "pyyaml>=6.0.2",
    "logging>=0.4.0",
    "pathlib>=1.0.0",
]

[tool.ruff]
line-length = 100
select = ["ALL"]
